@@ -361,6 +361,13 @@ static void
 primary_source_selection_changed_cb (ESourceSelector *selector,
 				     CalendarComponent *calendar_component)
 {
+	CalendarComponentPrivate *priv = calendar_component->priv;
+
+	if (priv->create_ecal) {
+		g_object_unref (priv->create_ecal);
+		priv->create_ecal = NULL;
+	}
+
 	update_uri_for_primary_selection (calendar_component);
 }
 
