@@ -1,7 +1,11 @@
 2004-01-15  Radek Doulik  <rodo@ximian.com>
 
+	* gui/tasks-component.c (primary_source_selection_changed_cb):
+	reset create_ecal
+
 	* gui/calendar-component.c (impl_requestCreateItem): merge with
 	JP's changes
+	(primary_source_selection_changed_cb): reset create_ecal
 
 2004-01-14  Radek Doulik  <rodo@ximian.com>
 
